samples/_failures_safe/1761196179_d6f1cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e61bc83.c: In function ‘main’:
./samples/SAFE/__tmp_2e61bc83.c:164:12: error: missing terminating " character
  164 |     printf("Compression ratio
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2e61bc83.c:164:5: error: expected expression at end of input
  164 |     printf("Compression ratio
      |     ^~~~~~
./samples/SAFE/__tmp_2e61bc83.c:164:5: error: expected declaration or statement at end of input
